@@ -14,7 +14,7 @@
  - PERFORMANCE OF THIS SOFTWARE.
 -->
 
-<!-- $Id: isc-manpage.xsl.in,v 1.4.2.2 2005/05/13 01:21:57 marka Exp $ -->
+<!-- $Id: isc-manpage.xsl.in,v 1.4.2.3 2005/09/12 00:07:03 marka Exp $ -->
 
 <!-- ISC customizations for Docbook-XSL manual page generator. -->
 
@@ -123,6 +123,16 @@
    -->
   <xsl:template match="funcsynopsis">
     <xsl:apply-templates/>
+  </xsl:template>
+
+  <!--
+    - Override template to change formatting.
+    - Line breaks in funcsynopsisinfo are significant.
+   -->
+  <xsl:template match="funcsynopsisinfo">
+    <xsl:text>&#10;.nf&#10;</xsl:text>
+    <xsl:apply-templates/>
+    <xsl:text>&#10;.fi&#10;</xsl:text>
   </xsl:template>
 
 </xsl:stylesheet>
